[gd_scene load_steps=12 format=3 uid="uid://r8xidy68s04r"]

[ext_resource type="FontFile" uid="uid://borwvgqdgawbj" path="res://files/fonts/EMPIREST.TTF" id="1_j3be7"]
[ext_resource type="Script" uid="uid://c2u0utdi762fi" path="res://scripts/audio_settings.gd" id="1_yonr6"]
[ext_resource type="PackedScene" uid="uid://4cavnb0mmtn8" path="res://scenes/master_volume_control.tscn" id="2_yonr6"]
[ext_resource type="PackedScene" uid="uid://eb04pytcq5xc" path="res://scenes/music_volume_control.tscn" id="3_koe27"]
[ext_resource type="PackedScene" uid="uid://6npyx3vjw3wg" path="res://scenes/sfx_volume_control.tscn" id="4_a0ntd"]
[ext_resource type="PackedScene" uid="uid://cwcx54enfythj" path="res://scenes/sfx_rotors_volume_control.tscn" id="5_w6v8r"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j3be7"]
bg_color = Color(0.2627451, 0.2627451, 0.2627451, 0.5882353)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yonr6"]
bg_color = Color(0.2627451, 0.2627451, 0.2627451, 0.5882353)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_koe27"]
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a0ntd"]
bg_color = Color(0.53333336, 0.6666667, 0.98039216, 0.3137255)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40
shadow_size = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_w6v8r"]

[node name="AudioSettings" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
script = ExtResource("1_yonr6")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
tooltip_text = "Volune Controls"
theme_override_styles/panel = SubResource("StyleBoxFlat_j3be7")

[node name="OptionsVBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -175.0
offset_right = 180.0
offset_bottom = 175.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="Panel/OptionsVBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_colors/font_color = Color(0.9607843, 0.9607843, 0.050980393, 1)
theme_override_fonts/font = ExtResource("1_j3be7")
theme_override_font_sizes/font_size = 50
text = "{OPTIONS}"

[node name="VolumeControls" type="VBoxContainer" parent="Panel/OptionsVBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="Panel/OptionsVBoxContainer/VolumeControls"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9607843, 0.9607843, 0.050980393, 1)
theme_override_fonts/font = ExtResource("1_j3be7")
theme_override_font_sizes/font_size = 25
text = "{VOLUME=CONTROLS}"
horizontal_alignment = 1

[node name="MasterVolumeControl" type="HBoxContainer" parent="Panel/OptionsVBoxContainer/VolumeControls"]
layout_mode = 2
size_flags_vertical = 3
tooltip_text = "Master Volium Controls"

[node name="MasterVolumeLabel" type="Label" parent="Panel/OptionsVBoxContainer/VolumeControls/MasterVolumeControl"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("1_j3be7")
theme_override_font_sizes/font_size = 18
text = "{MASTER}"

[node name="MasterVolumeControl" parent="Panel/OptionsVBoxContainer/VolumeControls/MasterVolumeControl" instance=ExtResource("2_yonr6")]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="MusicVolumeControl" type="HBoxContainer" parent="Panel/OptionsVBoxContainer/VolumeControls"]
layout_mode = 2
tooltip_text = "Music Volium Controls"

[node name="MusicVolumeLabel" type="Label" parent="Panel/OptionsVBoxContainer/VolumeControls/MusicVolumeControl"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("1_j3be7")
theme_override_font_sizes/font_size = 18
text = "{MUSIC}"

[node name="MusicVolumeControl" parent="Panel/OptionsVBoxContainer/VolumeControls/MusicVolumeControl" instance=ExtResource("3_koe27")]
layout_mode = 2
size_flags_horizontal = 8

[node name="SFXVolumeControl" type="HBoxContainer" parent="Panel/OptionsVBoxContainer/VolumeControls"]
layout_mode = 2
size_flags_vertical = 3
tooltip_text = "SFX Volium Controls"

[node name="SFXVolumeLabel" type="Label" parent="Panel/OptionsVBoxContainer/VolumeControls/SFXVolumeControl"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("1_j3be7")
theme_override_font_sizes/font_size = 18
text = "{SFX}"

[node name="SFXVolumeControl" parent="Panel/OptionsVBoxContainer/VolumeControls/SFXVolumeControl" instance=ExtResource("4_a0ntd")]
layout_mode = 2
size_flags_horizontal = 8

[node name="SFXRotorsVolumeControl" type="HBoxContainer" parent="Panel/OptionsVBoxContainer/VolumeControls"]
layout_mode = 2
size_flags_vertical = 3
tooltip_text = "SFX Rotors Volum Controls"

[node name="SFXVolumeLabel" type="Label" parent="Panel/OptionsVBoxContainer/VolumeControls/SFXRotorsVolumeControl"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("1_j3be7")
theme_override_font_sizes/font_size = 18
text = "{ROTORS}"

[node name="SFXRotorsVolumeControl" parent="Panel/OptionsVBoxContainer/VolumeControls/SFXRotorsVolumeControl" instance=ExtResource("5_w6v8r")]
layout_mode = 2

[node name="AudioBackButton" type="Button" parent="Panel/OptionsVBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.99215686, 0.21568628, 0.2784314, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.9607843, 0.9607843, 0.050980393, 1)
theme_override_fonts/font = ExtResource("1_j3be7")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_yonr6")
theme_override_styles/pressed = SubResource("StyleBoxFlat_koe27")
theme_override_styles/hover = SubResource("StyleBoxFlat_a0ntd")
theme_override_styles/focus = SubResource("StyleBoxEmpty_w6v8r")
text = "{BACK}"
